--- a/www/css/style.css
+++ b/www/css/style.css
@@ -246,7 +246,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** MIS QUINIELAS OVERLAY ***/
 
-.misquinielas {position: fixed; top: 97px; width: 100%; margin-left: 97%; background: url('../images/bg_trans_quinielas.png') repeat; height: 100%; padding-left: 1%; z-index: 100;}
+.misquinielas { position: fixed; top: 92px; width: 100%; margin-left: 97%; background: url(../images/bg_trans_quinielas.png) repeat; height: 100vh; overflow: auto; padding: 1% 1% 11rem 1%; z-index: 100;}
 .misquinielas .link_wrapper{pointer-events: none; display: block;}
 .misquinielas.open .link_wrapper{pointer-events: initial;}
 .quiniela_open {border-left: 3px solid #77BC1F;}
