Other requests from the lobby using new ajax implementation

--- a/www/views/partials/filter-tournaments.hbs
+++ b/www/views/partials/filter-tournaments.hbs
@@ -1,4 +1,6 @@
-	<li onclick=" app.clear_filters('sport_league');" class="selected"><span>Todas</span></li>
-{{# tournaments}}
-	<li onclick=" app.stack_filter('sport_league', '{{id}}');"><span>{{name}}</span></li>
-{{/ tournaments}}
+
+	{{# tournaments}}
+		{{# if public_enabled}}
+			<li onclick=" app.stack_filter('sport_league', '{{id}}');"><span>{{name}}</span></li>
+		{{/ if}}
+	{{/ tournaments}}
