--- a/www/css/style.css
+++ b/www/css/style.css
@@ -343,7 +343,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .desempates .desempate.desempate_tres .desempate_tres_right {width: 50%; float: left; position: relative;}
 /*** RADIOS ***/
 .radio_group input[type=radio] {position: absolute; visibility: hidden;}
-.radio_group input[type=radio]:checked ~ .check { border: 4px solid #598D16!important;}
+.radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16!important;}
 .radio_group input[type=radio]:checked ~ .check::before{ background: #598D16!important;}
 .radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 .radio_group.selection label{padding: 2px 2px 2px 30px; }
@@ -570,7 +570,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group ul li .edit_tarjeta img {float: left; margin-left: 10px;}
 .radio_group .agregar_tarjeta {text-align: center;}
 .radio_group ul li .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 0px; left: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.radio_group ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 13px; width: 13px; top: calc( 50% - 7px); left: calc( 50% - 7px); margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.radio_group ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 13px; width: 13px; top: 1px; left: 1px; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .radio_group ul li input[type=radio] {position: absolute;visibility: hidden;}
 .radio_group ul li input[type=radio]:checked ~ .check { border: 4px solid #598D16;}
 .radio_group ul li input[type=radio]:checked ~ .check::before{ background: #598D16;}
@@ -708,7 +708,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.header .header_right .header_user_info .user_info h2>a{color: #FFF!important; text-decoration: none!important;}
 
 	/*Filters */
-	.filtros .filtros_deporte ul li{width: 25%;}
+	.filtros .filtros_deporte ul li{width: 20%;}
 	
 	p.empty{font-size: 1rem; letter-spacing: 1px; text-align: center; margin: 3rem 0;}
 	
