--- a/www/views/partials/filter-tournaments.hbs
+++ b/www/views/partials/filter-tournaments.hbs
@@ -1,4 +1,4 @@
-
+	<li onclick=" app.clear_filters('sport_league');" class="selected"><span>Todas</span></li>
 	{{# tournaments}}
 		{{# if public_enabled}}
 			<li onclick=" app.stack_filter('sport_league', '{{id}}');"><span>{{name}}</span></li>
