Prizes tab integrated, header rendering bug fixed

--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -36,11 +36,9 @@
 				<h4>FILTROS</h4>
 				<img src="{{cordova_full_path}}images/filtros.png">
 			</div>
-			{{# selected_profile}}
-				<div class="header_logout" id="logoutComponent">
-					<h4>Salir</h4>
-					<img src="{{cordova_full_path}}images/error.png">
-				</div>
-			{{/ selected_profile}}
+			<div class="header_logout" id="logoutComponent" style="display: none;">
+				<h4>Cerrar sesión</h4>
+				<img src="{{cordova_full_path}}images/error.png">
+			</div>
 		</div>
 	</div><!-- header -->
