--- a/www/css/style.css
+++ b/www/css/style.css
@@ -702,7 +702,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.tab_profile.withraw {background: url('../images/bg_trans_negro.png') repeat; text-align: center;}
 
 	/* LOg out button */
-	.header .header_logout {width: 20%; float: right; text-align: center;}
+	.header .header_logout { width: 12%; position: absolute; top: 1rem; right: 0.5rem; text-align: center;}
 	.header .header_logout h4 {font-weight: 700; font-size: 12px; color: #8A8A8D; margin-bottom: 30%; margin-top: 5%;}
 	.header .header_logout img {width: 40%}
 	.header .header_right .header_user_info .user_info h2>a{color: #FFF!important; text-decoration: none!important;}
