--- a/www/views/private-create.hbs
+++ b/www/views/private-create.hbs
@@ -13,8 +13,8 @@
 					<h3>DEPORTE</h3>
 					<div class="deportes_select_crear clearfix">
 						<ul class="clearfix">
-							<li class="selected"><img src="images/futbol.png">Fútbol</li>
-							<li><img src="images/americano.png">Fúbtol Americano</li>
+							<li class="selected"><img src="{{cordova_full_path}}images/icon-football.png">Fútbol</li>
+							<li><img src="{{cordova_full_path}}images/icon-nfl.png">Fúbtol Americano</li>
 							<li>Clausura 2017</li>
 							<li class="selected">Champions League</li>
 						</ul>
@@ -170,42 +170,42 @@
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 							<tr class="player_info">
 								<td>1 LUGAR</td>
 								<td>12.3%</td>
-								<td class="ganar"><img src="images/billete.png">$1,234 MXN</td>
+								<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234 MXN</td>
 							</tr>
 						</table>
 					</div><!-- premios -->
