General rendering bug solved, loading message in empty lobby

--- a/www/views/lobby.hbs
+++ b/www/views/lobby.hbs
@@ -1,8 +1,7 @@
 
 	<div id="lobbyContainer" class="container clearfix lobby">
-		<div id="insertFeed" class="content quinielas">
-
-		</div><!-- content -->
+		<div id="insertFeed" class="content quinielas"></div>
+		<!-- content -->
 	</div><!-- container -->
 	
 	{{> filters}}
