--- a/www/css/style.css
+++ b/www/css/style.css
@@ -174,7 +174,7 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 
 /*** QUINIELAS ***/
 .content.quinielas{position: relative; min-height: 100vh;}
-.content.quinielas:empty::after{content: "Cargando quinielas disponibles..."; position: absolute; width: 100%; top: 52vh; text-align: center; font-size: 0.8rem; letter-spacing: 0.5px;}
+.content.quinielas:empty::after{ content: "Cargando quinielas en el lobby..."; position: absolute; width: 100%; top: 49vh; text-align: center; font-size: 0.9rem; letter-spacing: 0.5px; z-index: 999; }
 a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela {width: 99%; background: #000; border: 1px solid #414042; padding: 2.5%; border-radius: 3px; margin-top: 10px; text-align: left; position: relative;}
 .quiniela_header {width: 100%; margin-bottom: 10px;}
