--- a/www/css/style.css
+++ b/www/css/style.css
@@ -259,7 +259,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single {padding-top: 100px; padding-bottom: 70px; font-size: 12px; position: relative;}
 .quiniela_single .quiniela {width: 100%;}
 .quiniela_single .registro_quiniela {width: 100%; text-align: center; margin: 1rem 0;}
-.quiniela_single .registro_quiniela a:first-child {margin-right: 10px; display: block; }
+.quiniela_single .registro_quiniela a:first-child {display: block; margin: 0 auto;}
 .quiniela_single .quiniela_info { margin-right: 10px; display: block; }
 
 .error_inline{ display: block; clear: both; margin: 2rem 0 0 0; text-align: center; color: #f55934; text-transform: uppercase; font-size: 10px;}
@@ -272,7 +272,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .partidos {width: 100%; border-top: 1px solid #77BC1F;}
 .quiniela_single .partidos h3 {font-weight: 300; margin-top: 10px; margin-bottom: 10px; text-align: center; font-size: 12px;}
 .quiniela_single .partidos .opciones_partido {width: 100%; padding: 10px 0; border-top: 1px solid #8A8A8D;  margin-bottom: 0;}
-.quiniela_single .partidos .opciones_partido span {width: 33.33%; float: left; display: block; text-align: center; font-size: 12px;}
+.quiniela_single .partidos .opciones_partido span { width: 33.33%; float: left; display: block; text-align: center; font-size: 12px; font-weight: 500; letter-spacing: 0.5px;}
 .quiniela_single .partidos .partido { padding-bottom: 20px; width: 100%; margin: 0; border-top: 1px solid #8A8A8D; padding-top: 10px; position: relative;}
 .quiniela_single .partidos .partido .opcion_partido .linea {width: 100%; margin-top: 0px; float: left;}
 .quiniela_single .partidos .partido .opcion_partido .linea span {width: 100%; margin-top: 20px; text-align: center; display: block;}
@@ -311,7 +311,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .props {width: 100%; border-top: 1px solid #77BC1F;}
 .quiniela_single .props h3 {font-weight: 300; margin-top: 20px; margin-bottom: 10px; text-align: center; font-size: 12px;}
 .quiniela_single .props .prop {width: 100%; margin-bottom: 10px; border-top: 1px solid #8A8A8D; padding-top: 10px; position: relative;}
-.quiniela_single .props .prop h3 {margin-bottom: 20px;}
+.quiniela_single .props .prop h3 { margin: 0.5rem 0; font-size: 0.9rem; letter-spacing: 0.5px; color: #fff; font-weight: 500;}
 .quiniela_single .props .prop .opcion_prop input {float: left;}
 .quiniela_single .props .prop .opcion_prop img {float: left;}
 .quiniela_single .props .prop .opcion_prop span {float: left;}
@@ -321,6 +321,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:last-child {padding-left: 15%;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:last-child input {margin-right: 10px;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop {position: relative; width: 33.33%; text-align: center; float: left; padding-left: 5%;}
+.quiniela_single .props .prop .tres_opciones .opcion_prop:nth-of-type(2){ padding: 0.5rem 0;}
+.quiniela_single .props .prop .tres_opciones .opcion_prop:nth-of-type(2) span{ text-align: center; display: block; width: 100%; color: #72bb44;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop input {margin-right: 10px;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop img {margin-right: 5px; margin-left: 33%;}
 .quiniela_single .props .prop .cuatro_opciones .opcion_prop {position: relative; width: 25%; text-align: center; float: left; padding-left: 2.5%;}
@@ -343,7 +345,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .desempates .desempate.desempate_tres .desempate_tres_right {width: 50%; float: left; position: relative;}
 /*** RADIOS ***/
 .radio_group input[type=radio] {position: absolute; visibility: hidden;}
-.radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16!important;}
+.radio_group input[type=radio]:checked ~ .check { border-color: #598D16!important;}
 .radio_group input[type=radio]:checked ~ .check::before{ background: #598D16!important;}
 .radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 .radio_group.selection label{padding: 2px 2px 2px 30px; }
@@ -569,10 +571,10 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group ul li .edit_tarjeta {float: right;}
 .radio_group ul li .edit_tarjeta img {float: left; margin-left: 10px;}
 .radio_group .agregar_tarjeta {text-align: center;}
-.radio_group ul li .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 0px; left: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.radio_group ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 13px; width: 13px; top: 1px; left: 1px; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.radio_group ul li .check { display: block; position: absolute; border: 3.5px solid #AAAAAA; border-radius: 100%; height: 20px; width: 20px; top: 0px; left: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.radio_group ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 8px; width: 8px; top: 2.5px; left: 2.5px; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .radio_group ul li input[type=radio] {position: absolute;visibility: hidden;}
-.radio_group ul li input[type=radio]:checked ~ .check { border: 4px solid #598D16;}
+.radio_group ul li input[type=radio]:checked ~ .check { border-color: #598D16;}
 .radio_group ul li input[type=radio]:checked ~ .check::before{ background: #598D16;}
 .radio_group ul li label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 1.35em; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 
