Somehing something detail quiniela

--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -171,8 +171,8 @@
 					<input type="hidden" name="entry_id" id="entry_id" value="">
 					<div class="no_registros clearfix">
 						<span class="pregunta">¿Cuántos registros quieres para esta quiniela?</span>
-						<select name="num_entries" id="num_entries">
-							{{ numberOptions 40}}
+						<select class="no_check" name="num_entries" id="num_entries">
+							{{{ numberOptions 40}}}
 						</select>
 					</div><!-- no_registros -->
 					<div class="copiar_picks clearfix">
