--- a/www/views/detail-quiniela-live.hbs
+++ b/www/views/detail-quiniela-live.hbs
@@ -68,11 +68,70 @@
 				<li><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-scores" href="detail.html?registered=true&tab=scores">Marcadores</a></li>
 			</ul>
 		</div>
-		
+
 		<div id="tabContainer" class="tabs">
 			<div id="insertPartidos" class="partidos clearfix radio_group">
-
+				
 			</div><!-- partidos -->
+				<div class="desempates clearfix">
+					<h3>DESEMPATE</h3>
+						{{# each data.tiebreakers}}
+						tie
+							{{# if_eq type 'score'}}
+								<div class="desempate desempate_uno clearfix">
+									
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<span>LOC</span>
+										<input type="tel" name="desempate_uno_local">
+										<span>-</span>
+										<input type="tel" name="desempate_uno_visitante">
+										<span>VIS</span>
+									</div><!-- desempate_input -->
+								
+								</div><!-- desempate_uno -->
+							{{/ if_eq }}
+
+							{{# if_eq type 'number'}}
+								<div class="desempate desempate_dos clearfix">
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<input type="tel" name="desempate_dos_minuto">
+									</div><!-- desempate_input -->
+								</div><!-- desempate_dos -->
+							{{/ if_eq }}
+							
+							{{# if_eq type 'week_goals'}}
+								<div class="desempate desempate_dos clearfix">
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<input type="tel" name="desempate_dos_minuto">
+									</div><!-- desempate_input -->
+								</div><!-- desempate_dos -->
+							{{/ if_eq }}
+
+							{{# if_eq type 'other'}}
+								<div class="desempate desempate_tres clearfix">
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<span>SI</span>
+										<input type="radio" name="desempate_tres" value="si">
+										<span>NO</span>
+										<input type="radio" name="desempate_tres" value="no">
+									</div><!-- desempate_input -->
+								</div><!-- desempate_tres -->
+							{{/ if_eq }}
+						{{/ each}}
+
+				</div><!-- dempates -->
 		
 		</div>
 		
