--- a/www/views/detail-quiniela-live.hbs
+++ b/www/views/detail-quiniela-live.hbs
@@ -1,55 +1,55 @@
 
-	<div id="detailQuinielaRegistered" data-id="{{data.id}}" data-entry="{{data.entry_id}}" class="content quiniela_single quiniela_registrada_single">
+	<div id="detailQuinielaRegistered" data-id="{{data.pool.id}}" data-entry="{{data.pool.entry_id}}" class="content quiniela_single quiniela_registrada_single">
 		
 		<a class="link_wrapper">
-			<div class="quiniela {{# if data.upcoming}}quiniela_open{{/ if}} 
-			{{# if data.live}}quiniela_live{{/ if}} 
-			{{# if_eq data.status 'live'}}quiniela_live{{/ if_eq}} 
-			{{# if data.closed}}quiniela_closed{{/ if}} {{data.sport.name}}
-			{{# if_eq data.point_format "natural" }} natural {{/ if_eq }}  clearfix">
+			<div class="quiniela {{# if data.pool.upcoming}}quiniela_open{{/ if}} 
+			{{# if data.pool.live}}quiniela_live{{/ if}} 
+			{{# if_eq data.pool.status 'live'}}quiniela_live{{/ if_eq}} 
+			{{# if data.pool.closed}}quiniela_closed{{/ if}} {{data.pool.sport.name}}
+			{{# if_eq data.pool.point_format "natural" }} natural {{/ if_eq }}  clearfix">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						{{# if_eq data.point_format "line" }}
+						{{# if_eq data.pool.point_format "line" }}
 							<img src="{{cordova_full_path}}images/linea.png">
 						{{/ if_eq }}
-						{{# if_eq data.point_format "natural" }}
+						{{# if_eq data.pool.point_format "natural" }}
 							<img src="{{cordova_full_path}}images/natural.png">
 						{{/ if_eq }}
-						<img src="{{cordova_full_path}}images/{{data.sport.icon}}.png">
+						<img src="{{cordova_full_path}}images/{{data.pool.sport.icon}}.png">
 					</div><!-- iconos -->
-					<h2>{{data.name_replaced}}</h2>
+					<h2>{{data.pool.name_replaced}}</h2>
 				</div><!-- quiniela_header -->
 				<div class="quiniela_content clearfix">
 					<div class="quiniela_info clearfix">
-						<span class="registros">REG: {{data.entry_count}}</span>
-						<span class="cierre">{{^ if data.closed}}CIERRE{{/ if}}{{# if data.closed}}CERRÓ{{/ if}}: {{formatDate data.deadline_tz 'lll'}}</span>
-						{{# data.limited_capacity}}
-							<span class="limite">Limitado a {{data.max_entries}} entradas</span>
-						{{/ data.limited_capacity}}
-						{{# data.closed}}
+						<span class="registros">REG: {{data.pool.entry_count}}</span>
+						<span class="cierre">{{^ if data.pool.closed}}CIERRE{{/ if}}{{# if data.pool.closed}}CERRÓ{{/ if}}: {{formatDate data.pool.deadline_tz 'lll'}}</span>
+						{{# data.pool.limited_capacity}}
+							<span class="limite">Limitado a {{data.pool.max_entries}} entradas</span>
+						{{/ data.pool.limited_capacity}}
+						{{# data.pool.closed}}
 							<span class="limite">FINALIZÓ</span>
-						{{/ data.closed}}
+						{{/ data.pool.closed}}
 						{{# if_eq status "live"}}
-							<span class="live">JUGANDO</span>
+							<span class="live">EN CURSO</span>
 						{{/ if_eq}}
 					</div><!-- quiniela_info -->
 					
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						{{# if_eq data.entry_currency 'real' }}
+						{{# if_eq data.pool.entry_currency 'real' }}
 							<img src="{{cordova_full_path}}images/billecoin.png">
 						{{/ if_eq }}
-						{{# if_eq data.entry_currency 'pickcoin' }}
+						{{# if_eq data.pool.entry_currency 'pickcoin' }}
 							<img src="{{cordova_full_path}}images/pickcoin.png">
 						{{/ if_eq }}
-						<span class="number">${{ formatCurrency data.entry_fee}}</span>
+						<span class="number">${{ formatCurrency data.pool.entry_fee}}</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						{{# if data.guaranteed_prize}}
+						{{# if data.pool.guaranteed_prize}}
 							<img src="{{cordova_full_path}}images/garantizado.png">
 						{{/ if }}
-						<span class="number">${{ formatCurrency data.available}}</span>
+						<span class="number">${{ formatCurrency data.pool.available}}</span>
 					</div>
 				</div><!-- quiniela_content -->
 			</div><!-- quiniela -->
@@ -60,12 +60,12 @@
 		</div><!-- dropdowns -->
 		<div class="tabs_quiniela clearfix">
 			<ul>
-				<li class="selected"><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-postures" href="detail.html?registered=true&tab=postures">Picks</a></li>
-				<li><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-places" href="detail.html?registered=true&tab=places">Posiciones</a></li>
-				<li><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-chat" href="detail.html?registered=true&tab=chat">Chat</a></li>
-				<li><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-prizes" href="detail.html?registered=true&tab=prizes">Premios</a></li>
-				<li><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-group-picks" href="detail.html?registered=true&tab=group-picks">Picks de grupo</a></li>
-				<li><a class="hook missing_info" data-object="{{data.id}}" data-extra="" data-resource="detail-scores" href="detail.html?registered=true&tab=scores">Marcadores</a></li>
+				<li class="selected"><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-postures" href="detail.html?registered=true&tab=postures">Picks</a></li>
+				<li><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-places" href="detail.html?registered=true&tab=places">Posiciones</a></li>
+				<li><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-chat" href="detail.html?registered=true&tab=chat">Chat</a></li>
+				<li><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-prizes" href="detail.html?registered=true&tab=prizes">Premios</a></li>
+				<li><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-group-picks" href="detail.html?registered=true&tab=group-picks">Picks de grupo</a></li>
+				<li><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-scores" href="detail.html?registered=true&tab=scores">Marcadores</a></li>
 			</ul>
 		</div>
 
@@ -75,8 +75,9 @@
 			</div><!-- partidos -->
 				<div class="desempates clearfix">
 					<h3>DESEMPATE</h3>
-						{{# each data.tiebreakers}}
-						tie
+						{{# each data.tiebreakers_iter}}
+						{{# each .}}
+						
 							{{# if_eq type 'score'}}
 								<div class="desempate desempate_uno clearfix">
 									
@@ -130,9 +131,10 @@
 								</div><!-- desempate_tres -->
 							{{/ if_eq }}
 						{{/ each}}
+						{{/ each}}
 
 				</div><!-- dempates -->
-		
+				<small class="info">Se tomarán los resultados únicamente de tiempo reglamentario. (No tiempos extras)</small>
 		</div>
 		
 		
