--- a/www/views/partials/each-quiniela.hbs
+++ b/www/views/partials/each-quiniela.hbs
@@ -29,7 +29,7 @@
 						<span class="limite">FINALIZÓ</span>
 					{{/ if_less }}
 					{{# if_eq status "live"}}
-						<span class="live">JUGANDO</span>
+						<span class="live">EN CURSO</span>
 					{{/ if_eq}}
 					{{!-- <span class="aciertos">ACIERTOS: 3/15</span> --}}
 				</div><!-- quiniela_info -->
